--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,13 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
+@import "./modules/mixins";
 
-html,body{font-size:13px;min-width:320px;font-family: 'Questrial', sans-serif;}
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-family: 'Questrial', sans-serif;;vertical-align:baseline;-webkit-font-smoothing: antialiased;}
+// Fonts
+$mainFont: "Questrial", sans-serif;
+
+
+html,body{font-size:13px;min-width:320px;font-family: $mainFont;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-family:$mainFont;;vertical-align:baseline;-webkit-font-smoothing: antialiased;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
 body,input,textarea,select,button{font-size:1rem;line-height:1.3rem;font:inherit;-webkit-font-smoothing: antialiased;}
 ol,ul{list-style:none}
@@ -20,3 +25,5 @@ h4{font-size:1.4rem;line-height:1.7rem}
 h5{font-size:1.2rem;line-height:1.5rem}
 h6{font-size:1.1rem;line-height:1.4rem}
 p{font-size:1rem;line-height:1.3rem}
+
+
